<resources>
    <string name="app_name">Github Client</string>
    <string name="image_descripcion">Descripcion imagen</string>
    <string name="repo_name">Nombre del repositorio</string>
    <string name="repo_descripcion">Descripcion del repositorio</string>
    <string name="repo_lang">Lenguaje</string>
    <string name="test_text">Texto de prueba</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
</resources>